# Finite-State-Machine-Navigation

./: README.md
diffdrive_bringup/: CMakeLists.txt  package.xml
diffdrive_bringup/launch/: diffdriveNAV.launch.xml  diffdriveSLAM.launch.xml
diffdrive_description/: CMakeLists.txt  package.xml
diffdrive_description/config/: NAV2.yaml  SLAM.yaml  gazebo_bridge.yaml
diffdrive_description/maps/: Warehouse.pgm  Warehouse.yaml
diffdrive_description/rviz/: rviz_config.rviz  rviz_config_nav2.rviz
diffdrive_description/urdf/: base_mobile.xacro  common_properties.xacro  robot_base.urdf.xacro  robot_gazebo.xacro
diffdrive_description/world/: Warehouse.world
mission_manager/: CMakeLists.txt  package.xml
mission_manager/config/: locations.yaml
mission_manager/include/mission_manager/: mission_manager_node.hpp
mission_manager/src/: mission_manager_node.cpp
