<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mission_manager</name>
  <version>0.1.0</version>
  <description>
    Mission Manager implementing a finite state machine for autonomous
    pickup, delivery, and docking using Nav2.
  </description>

  <maintainer email="shuchi.professional@gmail.com">Shuchi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>

  <!-- TF & utilities -->
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ament_index_cpp</depend>

  <!-- YAML -->
  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
